--- a/src/rem-notebook.html
+++ b/src/rem-notebook.html
@@ -180,7 +180,7 @@
         </section> 
         <!-- ./info -->
 
-        <!-- <section class="cost">
+        <section class="cost">
             <div class="container">
                 <h2 class="title cost__title">
                     Стоимость услуг
@@ -188,63 +188,65 @@
                 <div class="cost__subtitle">
                     Выезд и диагностика <span class="cost__subtitle--color">бесплатно</span>
                 </div>
-                <div class="cost__block">
-                    <div class="cost__block-inner">
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Установка Windows</div>
-                            <div class="cost__block-text">от 450 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Установка программ</div>
-                            <div class="cost__block-text">от 50 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Установка MS Office</div>
-                            <div class="cost__block-text">от 375 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Установка антивируса</div>
-                            <div class="cost__block-text">от 375 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Чистка системы от мусора</div>
-                            <div class="cost__block-text">от 450 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Лечение от вирусов</div>
-                            <div class="cost__block-text">от 275 руб.</div>
-                        </div>
-                        <div class="cost__block-item cost__block-item--7">
-                            <div class="cost__block-title">Перепрошивка BIOS</div>
-                            <div class="cost__block-text">от 450 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Чистка ПК от пыли</div>
-                            <div class="cost__block-text">от 790 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Замена термопасты</div>
-                            <div class="cost__block-text">от 350 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Замена комплектующих</div>
-                            <div class="cost__block-text">от 350 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Восстановление данных</div>
-                            <div class="cost__block-text">от 500 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Ремонт блока питания</div>
-                            <div class="cost__block-text">от 450 руб.</div>
-                        </div>
-                        <div class="cost__block-item">
-                            <div class="cost__block-title">Ремонт материнской платы</div>
-                            <div class="cost__block-text">от 450 руб.</div>
-                        </div>
-                        <div class="cost__block-item cost__block-item--14">
-                            <div class="cost__block-title">Ремонт жесткого диска</div>
-                            <div class="cost__block-text">от 500 руб.</div>
+                <div class="cost__block-container">
+                    <div class="cost__block">
+                        <div class="cost__block-inner">
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Установка Windows</div>
+                                <div class="cost__block-text">от 450 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Установка программ</div>
+                                <div class="cost__block-text">от 50 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Установка MS Office</div>
+                                <div class="cost__block-text">от 375 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Установка антивируса</div>
+                                <div class="cost__block-text">от 375 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Чистка системы от мусора</div>
+                                <div class="cost__block-text">от 450 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Лечение от вирусов</div>
+                                <div class="cost__block-text">от 275 руб.</div>
+                            </div>
+                            <div class="cost__block-item cost__block-item--7">
+                                <div class="cost__block-title">Перепрошивка BIOS</div>
+                                <div class="cost__block-text">от 450 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Чистка ПК от пыли</div>
+                                <div class="cost__block-text">от 790 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Замена термопасты</div>
+                                <div class="cost__block-text">от 350 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Замена комплектующих</div>
+                                <div class="cost__block-text">от 350 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Восстановление данных</div>
+                                <div class="cost__block-text">от 500 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Ремонт блока питания</div>
+                                <div class="cost__block-text">от 450 руб.</div>
+                            </div>
+                            <div class="cost__block-item">
+                                <div class="cost__block-title">Ремонт материнской платы</div>
+                                <div class="cost__block-text">от 450 руб.</div>
+                            </div>
+                            <div class="cost__block-item cost__block-item--14">
+                                <div class="cost__block-title">Ремонт жесткого диска</div>
+                                <div class="cost__block-text">от 500 руб.</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -283,10 +285,10 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section> 
         <!-- ./cost -->
 
-        <!-- <section class="breakdowns">
+        <section class="breakdowns">
             <h2 class="title breakdowns__title">Типовые поломки</h2>
             <div class="breakdowns__content">
                 <img class="breakdowns__image-notebook" src="./img/breakdowns/notebook-image.png" alt="notebook-image">
@@ -334,10 +336,11 @@
                             </div>
                         </div>
                     </div>
+                    <img class="breakdowns__image-mobile" src="./img/breakdowns/image-mobile.png" alt="image-mobile">
                     <button data-modal class="button breakdowns__button">Оставить заявку</button>
                 </div>
             </div>
-        </section>  -->
+        </section> 
         <!-- ./breakdowns -->
 
         <section class="services">
@@ -434,6 +437,20 @@
         </div>
     </footer>
     <!-- ./footer -->
+
+    <div class="menu">
+        <div class="menu__dialog">
+            <img data-menuClose class="menu__close" src="img/modal/close.png" alt="close">
+            <div class="menu__box menu__box--1">
+                <nav class="menu__nav">
+                    <a data-menuClose href="./index.html" class="menu__link">Ремонт компьютеров</a>
+                    <a data-menuClose href="./rem-notebook.html" class="menu__link">Ремонт ноутбуков</a>
+                    <a data-menuClose href="./rem-help.html" class="menu__link">Компьютерная помощь</a>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <!-- ./menu -->
 
     <div class="modal modal-main">
         <div class="modal__container">
